--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=movie
+
+spring.datasource.url=jdbc:mysql://localhost:3306/db_movie_api
+spring.datasource.username=root
+spring.datasource.password=Root.1234
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
